--- a/笔记记录/数据库知识.md
+++ b/笔记记录/数据库知识.md
@@ -105,4 +105,44 @@
 2. 一致性Hash分区，
 3. 虚拟槽分区
 	
-   
+### 4.5 Redis集群
+1. redis集群的三种模式
+	- 1. 主从模式
+         1. 集群介绍
+          - (1)主从模式里使用一个redis实例作为主机，其余多个实例作为备份集（slave）
+          - (2)master用来支持数据的写入和读取操作，而slave节点支持读取以及master的数据同步
+          - (3)在整个架构中，master和slave实例里的数据完全一致。
+         2. 主从复制原理：
+          - 全量同步:
+            - 1、当从节点启动时，向主节点发送SYNC消息，
+            - 2、主节点收到SYNC命令后，开始在后台执行保存快照的命令生成RDB文件，使用缓冲记录此后执行的所有命令。
+            - 3、主节点快照完成后，将快照文件和所有缓存命令发送给集群内的从节点，并在发送期间继续记录被执行的命令。
+            - 4、主节点快照发送完成后向从节点发送所缓冲区的命令。
+            - 5、从节点载入快照文件后，开始接受命令请求，执行收到的主节点缓冲区的写命令。
+          - 增量同步:
+            - 主从复制中因为网络原因造成数据丢失的场景，当从节点再次连接主节点。如果条件允许，主节点会补发丢失数据给从节点。因为补发的数据远远小于全量数据，可以有效的避免全量复制的过高开销。
+         3. 主节点故障的处理方式：
+      	  - 主从模式中，每个客户端连接redis实例都指定了ip和端口号。如果连接的redis实例因为故障下线了，则无法通知客户端连接其他客户端，因此只能手动操作。
+         4. 不支持高可用
+    - 2. 哨兵模式
+          1. 集群介绍：和主从模式不一样的是，哨兵模式中增加了独立进程（即哨兵）来监控集群的一举一动。客户端在连接集群时，首先连接哨兵，通过哨兵查询主节点的地址，然后再去连接主节点信息进行数据交互。如果master异常，则会进行master-slave切换，将最优的一个slave切换为主节点。同时，哨兵持续监控挂掉的节点，待其恢复后，作为新的节点假如集群中。
+          2. 主节点故障处理方式/哨兵工作方式：
+          	- 1、每个哨兵每秒向集群中的master、slave以及其他哨兵发送一个Ping命令。
+            - 2、如果某个实例距离最后一次有效回复ping命令的时间超过一定的值，则会被标记为下线。
+            - 3、如果master被标记为主观下线，那么正在监视master的哨兵以每秒的频率确认其确实进入主观下线状态，且数量达到一定值时，master会被标记为下线，然后通知其他的服务器，修改配置文件，让他们切换主机。
+            - 4、客户端在master节点发生故障时会向哨兵要地址，此时会获得最新的master节点地址。
+          3. 扩容问题：哨兵模式的出现虽然解决了主从模式中master节点宕机不能自动切换的问题(即高可用)的问题。但是，随着业务的逐渐增长，不可避免需要对当前业务进行扩容。
+            - 1、垂直扩容：通过增加master来增加容量
+            - 2、水平扩容：通过增加节点来进行扩容，即在当前基础上再增加一个master节点。
+              - 虽然垂直扩容方式很便捷，不需要添加多余的节点，但是机器的容量是有限的，最终还是需要通过水平扩容方式来解决。而水平扩容涉及到数据的迁移，且迁移过程中又要保证服务的可用性。因此，数据能不迁移，尽量不迁移。
+              - 显然哨兵模式无法满足这种情形，因此redis-cluster应运而生。
+       - 3. Redis-cluster模式
+          1. 集群介绍：
+             1. redis-cluster模式采用了无中心节点的方式来实现，每个主节点都会与其他节点保持连接。节点间通过gossip协议交换彼此的信息。同时每个主节点又有一个或者多个从节点。
+             2. 客户端连接集群时，直接与redis集群的每个主节点连接，根据hash算法取模key存储在不同的hash槽上。
+             3. 在集群中采用数据分片的方式，将redis集群分为16384个哈希槽。 这些哈希槽分别存储于三个主节点中。
+             	- master1负责 0-5460号哈希槽。
+                - master2负责 5461-10922哈希槽。
+                - master3负责 10922-16383哈希槽。
+             4. 每个节点会保存一份数据分布表，节点将自己的slot信息发送到其他节点，节点间不停地传递数据分布表。
+             5. 客户端连接集群时，通过集群的某个节点地址进行连接。客户端尝试向这个节点执行命令时，比如获取某个key值，如果key所在的slot刚好在该节点上，则能够直接执行成功。如果slot不在该节点，则节点返回MOVED错误，同时把该slot对应的节点告诉客户端，客户端可以去该节点执行命令。
