[fix]问题修改上传。

--- a/笔记记录/10、计算机网络.md
+++ b/笔记记录/10、计算机网络.md
@@ -7,6 +7,9 @@
  - 数据链路成
  - 物理层
 
+ ![img_1.png](img_1.png)	
+
+
 ## 2 、TCP/IP 协议
 1、SYN：同步标识位
 2、SCK：确认标识位
@@ -31,7 +34,7 @@
  		数字签名
  		证书：证书颁发结构（CA）
       
-### 6、HTTP状态码
+## 6、HTTP状态码
  - 1XX：信息性状态码（接受的请求正在处理）
  - 2XX：成功状体码。请求处理完毕
  - 3XX：重定向状态码。 301 资源被永久重定向 302：资源被临时重定向了。
@@ -39,3 +42,7 @@
  - 5XX：服务器错误状态码：服务器处理请求出错。
 	- 500:服务端出问题了。比如程序报错了，但未处理错误。
     - 502:Bad Gateway：我们的请求到服务端了，但是服务端响应的却是一个错误的响应，
+	
+## 7、TCP滑动窗口？
+ - 【参考】https://juejin.cn/post/6844903809995505671
+ ![img.png](img.png)
