--- a/笔记记录/8、分布式.md
+++ b/笔记记录/8、分布式.md
@@ -20,23 +20,46 @@
         - 3. 最终一致性：系统会保证一定时间内达到数据一致的状态。
     
 ##  3、分布式算法paxos
+
+ - Paxos算法是兰伯特在1990年提出的一种分布式算法。
+ - 兰伯特当时提出的Paxos算法主要包括两个部分，BasicPaxos算法和Multi-Paxos算法
+ - Raft算法那、ZAB算法、FastPaxos算法都是基于Paxos算法改进而来的
+      
  - 3种角色：    
-     - 1.Proposer（提议者）：提议者提提案，用于投票表决。
+     - 1.Proposer（提议者）：提议者提提案，用于投票表决。Proposal信息包括Proposal ID和提议的值（Value）。
      - 2.Acceptor（接收者）：对提案进行投票，并接受达成共识的提案。
      - 3.Learner（学习者）：被告知投票的结果，接受达成共识的提案。
  - 算法流程：Paxos算法包括两个阶段：第一个阶段Prepare（准备），第二个阶段Accept（接受）
-    - Prepare阶段：
-        1. 提议者提出一个新的方案[Mn,?],然受向接收者的某个超过半数的子集发出编号为Mn的准备请求。
-        2. 如果一个接受者收到一个Mn的编号的准备请求，  
-    - Accept接受阶段：
-        1. 
-        2. 
-
+    - 第一阶段：Prepare阶段：
+       1. 提议者提出一个新的方案[Mn,?],然受向接收者的某个超过半数的子集发出编号为Mn的准备请求。
+       2. Acceptors针对收到的Prepare请求进行Promise承诺。
+    - 第二阶段：Accept接受阶段：
+       - Proposer收到多数Acceptor的承诺的Promise，想Acceptors发出Propose请求，Acceptors针对收到的Propose请求进行Accept处理。
+    - 第三阶段： Learn阶段 
+       - Proposer在收到多数Acceptors的Accept之后，标志着本次Accept成功，决议形成，将形成的决议发送给所有Learners。
+  - Multi-Paxos算法：
+   - 原始的Paxos算法只能针对一个值进行决议。决议的形成至少需要两个网路来回。
+   - Multi-Paxos算法针对Basic-Paxos算法进行了以下两点改进。
+      - 1、针对每个要确定的值。运行一次Paxos算法实例，形成决议。每个Paxos实例使用唯一的Instance ID标识。
+      - 2、在所有的Proposer中选举一个Leader，由Leader唯一地提交Proposal给Acceptors进行表决。这样没有Proposer竞争，解决了活锁的问题。在系统仅有一个Leader的情况下。Prepare阶段就可以跳过。
+  - 【参考 https://zhuanlan.zhihu.com/p/31780743 】
 ## 4、分布式Raft算法
+ - Raft算法实现了和Paxos相同的功能，他将一致性分解为多个子问题：Leader选举、日志同步、安全性、日这压缩、成员变更等、
  - 三种角色：
-    - Leader（领导者）
-    - Follower（跟随者）
-    - Candidate（候选人）
+    - Leader（领导者）：接收客户端的请求，并向Follower同步请求日志，当日志同步到大多数节点上后告诉Follower提交日志。
+    - Follower（跟随者）：接收并持久化Leader同步的日志。在Leader告诉日志可以提交后，提交体日志。
+    - Candidate（候选人）：Leader选举过程中的临时角色。
+ - Raft要求系统在任意时刻最多只有一个Leader。正常工作期间只有一个Leader和Follower。
+ - Leader选举：Raft使用心跳触发Leader选举。当服务器启动时，初始化为Follower。Leader向所有Follower周期性地发送heatbeat。如果Follower在选举超时时间内没有收到Leader的heartbeat，就会等待一段随机的时间后发起一次Leader选举。Follower将其当前term加一然后转换为Candidate。它首先给自己投票并且给集群中的其他服务器发送 RequestVote RPC 。结果有以下三种情况：
+   -  赢得了多数的选票，成功选举为Leader；
+   -  收到了Leader的消息，表示有其它服务器已经抢先当选了Leader；
+   -  没有服务器赢得多数的选票，Leader选举失败，等待选举时间超时后发起下一次选举。
+ - 日志同步
+ - 安全性
+ - 日志压缩
+ - 成员变更
+ - 【参考文档 ：https://zhuanlan.zhihu.com/p/32052223】
+
     
 ## 5、分布式Gossip协议。
  - 又称 epidemic 协议（epidemic protocol），是基于流行病传播方式的节点或者进程之间信息交换的协议，在分布式系统中被广泛使用，比如我们可以使用 gossip 协议来确保网络中所有节点的数据一样。
@@ -44,11 +67,130 @@
  - 1.两种消息传播模式
     - 反熵（Anti-Entropy）和传谣（Rumor-Mongering）
     - 反熵就是指消除不同节点数据的差异，提升节点间数据的相似性，从而降低熵值。每隔时间段就随机选取某个其他节点，然后通过互相交换自己的所有数据来消除两者之间的差异性，实现数据的最终一致性。
-    - 谣言传播指的是分布式系统的一个节点一旦有了新数据之后，就会变成活跃节点，活跃节点会周期性的想其他节点发送新数据，知道所有的节点存储了该数据。
+    - 在实现反熵的时候主要有推、拉和推拉三种方式：
+      - 推：推方式，就是将自己的副本数据退给对方，修复对方副本中的熵。
+      - 拉：拉方式就是拉取对方的所有副本数据，修复自己副本中的熵。
+      - 推拉：同时修复自己副本和对方副本中的熵。
+    - 谣言传播指的是分布式系统的一个节点一旦有了新数据之后，就会变成活跃节点，活跃节点会周期性的想其他节点发送新数据，直到所有的节点存储了该数据。
+ - 总结：
+   - 反熵会传播节点的所有数据，二谣言传播只会传播节点中新增的数据
+   - 我们一般会给反熵设计一个闭环。
+   - 谣言传播比较适合节点数量比较多或者节点动态变化的场景。
+ - 优缺点：
+   - 优势：
+      - 1、相比于其他分布式算法，Gossip理解起来更简单。
+      - 2、能够容忍任意节点的增加或者减少。
+      - 3、速度相对较快。
+   - 劣势
+      - 1、消息需要经过多次传播的轮次才能到达整个网络
+      - 2、不允许存在恶意节点
+      - 3、可能会存在消息冗余。同一节点可能会重复收到消息。
    
+## 6、分布式ID的实现方式：
+### 1、什么是分布式ID?
+ - 分布式ID是分布式系统下一ID。ID就是数据的唯一标识。
+ 
+### 2、分布式ID应该满足哪些要求？
+ - 全局唯一性
+ - 高性能：生成速度快，本地资源占用要小。
+ - 高可用：
+ - 方便易用
+除了这些以外
+ - 安全：不包含敏感信息
+ - 有序递增
+ - 有具体的业务含义。
+ - 独立部署
 
+### 2、分布式ID实现方案？
+ - 1、数据库自增ID   
+   - 优点：实现简单
+   - 缺点：支持的并发量不大。存在数据库单点问题。没有业务含义、有敏感数据（订单量）、每次获取Id都要访问数据库、 
+ - 2、数据库号段模式
+   - 优点：ID有序递增、存储消耗的空间小。
+   - 缺点：存在数据库单点问题、安全性、ID没有具体的业务含义。
+ - 3、Redis
+   - 通过 Redis 的 incr 命令即可实现对 id 原子顺序递增。
+   - 为了提高可用性和并发，我们可以使用 Redis Cluster。
+   - 优缺点：   
+    - 优点：性能不错且ID是自增的。
+    - 缺点：和数据库主键自增方案的缺点类似
+ - 4、算法实现
+   - UUID：UUID 是 Universally Unique Identifier（通用唯一标识符） 的缩写。UUID 包含 32 个 16 进制数字（8-4-4-4-12）。不同版本对应的UUID生成规则不一样
+     - 版本1：UUID 是根据时间和节点 ID（通常是 MAC 地址）生成
+     - 版本2：UUID 是根据标识符（通常是组或用户 ID）、时间和节点 ID 生成；
+     - 版本3、版本5：版本 5 - 确定性 UUID 通过散列（hashing）名字空间（namespace）标识符和名称生成；
+     - 版本4：UUID 使用随机性或伪随机性生成。、
+   - 优缺点：
+      - 优点：生成速度快、简单易用
+      - 缺点：消耗空间大、不安全（MAC地址泄露）、无序、不自增、没有具体的业务含义、解决重复ID（机器时间不正确）
+   - 雪花算法：Snowflake 是 Twitter 开源的分布式 ID 生成算法。Snowflake 由 64 bit 的二进制数字组成，这 64bit 的二进制被分成了几部分，每一部分存储的数据都有特定的含义：
+      - 第0位：符号位（标识正负），始终为0，没有用。不用管
+      - 1-41位：一共 41 位，用来表示时间戳，单位是毫秒，可以支撑 2 ^41 毫秒（约 69 年）
+      - 42-52位：一共 10 位，一般来说，前 5 位表示机房 ID，后 5 位表示机器 ID（实际项目中可以根据实际情况调整）。这样就可以区分不同集群/机房的节点。
+      - 53-64位：一共 12 位，用来表示序列号。 序列号为自增值，代表单台机器每毫秒能够产生的最大 ID 数(2^12 = 4096),也就是说单台机器每毫秒最多可以生成 4096 个 唯一 ID。
+   - 优缺点：
+      - 优点：生成速度比较快、生成的 ID 有序递增、比较灵活（可以对 Snowflake 算法进行简单的改造比如加入业务 ID）
+      - 缺点：需要解决重复 ID 问题（依赖时间，当机器时间不对的情况下，可能导致会产生重复 ID）。
+ - 5、开源框架
+   - UidGenerator(百度)
+   - Leaf(美团)
+   - Tinyid(滴滴) 
 
+## 7、分布式锁的实现？
+### 1、分布式锁应该具备哪些条件？
+ - 1、互斥
+ - 2、高可用
+ - 3、可重入
+ 除了以上 一个好用的分布式锁还应该
+ - 4、高性能
+ - 5、非阻塞：如果获取不到锁，不能无限阻塞
 
+### 2、分布式锁有哪些实现方式？
+ - 1、基于关系型数据库。eg。MySQL
+ - 2、基于分布式协调服务。eg.Zookeeper
+ - 3、基于分布式键值存储系统 eg. Redis
+
+### 3、基于Redis的分布式锁怎么实现？
+ - SETNX命令：在Redis中。SETNX命令可以帮助我们实现互斥。SETNX即SET if Not eXists。如果key不存在的话，才会设置key的值。如果key已经存在，那么SETNX啥也不会做。
+ - 释放锁的话。直接通过DEL命令删除对应的Key即可。
+   - 为了防止误删了其他的锁。我们建议使用Lua脚本通过Key对应的value（唯一值）来判断，选用Lua脚本是为了保证解锁操作的原子性。
+ - 给锁这是一个过期时间。
+   - 为了避免锁无法被释放。我们开想到一个解决办法就是：给这个key（也就是锁）设置一个过期时间。
+   - set lockKey uniqueValue EX 3 NX
+    - lockKey：加锁的锁名字。
+    - uniqueValue：能够唯一表示所的随机字符串
+    - NX
+    - EX：过期时间设置。
+ - Redisson框架
+ - Redisson是一个开源的Redis客户端框架。提供了很多开箱即用的功能。不仅包括各种分布式锁的实现。还支持Redis单机、Redis Sentinel、Redis Cluster等多种部署架构。
+    - Redisson中的分布式锁带有自动续期机制。其提供了一个专门用来监控和续期锁的 Watch Dog（ 看门狗），如果操作共享资源的线程还未执行完成的话，Watch Dog 会不断地延长锁的过期时间，进而保证锁不会因为超时而被释放。
+    - 只有未指定锁超时时间，才会用到Watch Dog自动续期机制。
+ - Redis如何解决集群情况下的分布式锁的可靠性？
+  - Redlock算法：算法的思想是让客户端向 Redis 集群中的多个独立的 Redis 实例依次请求申请加锁，如果客户端能够和半数以上的实例成功地完成加锁操作，那么我们就认为，客户端成功地获得分布式锁，否则加锁失败。即使部分 Redis 节点出现问题，只要保证 Redis 集群中有半数以上的 Redis 节点可用，分布式锁服务就是正常的。
+
+### 4、基于Zookeeper实现分布式锁。
+ - Zookeeper分布式锁是基于临时顺序节点和Watcher（事件监听器）实现的。
+  - 获取锁：
+     - 1、首先我们要有个持久节点/locks，客户端获取锁就是在locks下创建临时顺序节点。
+     - 2、假设客户端1创建了/locks/lock1节点，创建成功之后，会判断lock1是否是 /locks下最小的子节点。
+     - 3、如果lock1是最小的子节点。则获取锁成功。否则获取锁失败。
+     - 4、如果获取锁失败，则说明有其他的客户端已经成功获取锁。客户端 1 并不会不停地循环去尝试加锁，而是在前一个节点比如/locks/lock0上注册一个事件监听器。这个监听器的作用是当前一个节点释放锁之后通知客户端 1（避免无效自旋），这样客户端 1 就加锁成功了。
+  - 释放锁：
+      - 1、成功获取锁的客户端在执行完业务流程之后，会将对应的子节点删除。
+      - 2、成功获取锁的客户端在出现故障之后，对应的子节点由于是临时顺序节点，也会被自动删除，避免了锁无法被释放。
+      - 3、我们前面说的事件监听器其实监听的就是这个子节点删除事件，子节点删除就意味着锁被释放。
+  - 实际项目中，推荐使用 Curator 来实现 ZooKeeper 分布式锁。
+
+### 5、Zookeeper分布式锁为什么要使用临时顺序节点？
+ - 每个数据节点在 ZooKeeper 中被称为 znode，它是 ZooKeeper 中数据的最小单元。
+ - 我们通常是将 znode 分为 4 大类：
+  - 持久（PERSISTENT）节点：一旦创建就一直存在即使 ZooKeeper 集群宕机，直到将其删除。
+  - 临时（EPHEMERAL）节点：临时节点的生命周期是与 客户端会话（session） 绑定的，会话消失则节点消失 。并且，临时节点只能做叶子节点 ，不能创建子节点。
+  - 持久顺序（PERSISTENT_SEQUENTIAL）节点：除了具有持久（PERSISTENT）节点的特性之外， 子节点的名称还具有顺序性。比如 /node1/app0000000001、/node1/app0000000002 。
+  - 临时顺序（EPHEMERAL_SEQUENTIAL）节点：除了具备临时（EPHEMERAL）节点的特性之外，子节点的名称还具有顺序性。
+
+## 8、分布式事务？
     
-   
+ 
+
 
