[feat]分布式、数据库知识上传。

--- a/笔记记录/8、分布式.md
+++ b/笔记记录/8、分布式.md
@@ -190,7 +190,72 @@
   - 临时顺序（EPHEMERAL_SEQUENTIAL）节点：除了具备临时（EPHEMERAL）节点的特性之外，子节点的名称还具有顺序性。
 
 ## 8、分布式事务？
-    
+ - 分布式事务有哪些常见的实现方案？
+   - 分布式常见的方案有2PC、3PC、TCC、本地消息表、MQ消息事务、最大努力通知、SAGA事务等等。
+### 1、2PC
+ - 说到2PC就不得先说分布式事务中的XA协议。
+   - 在这个协议中，有三个角色
+     - AP ：应用系统（服务）
+     - TM：事务管理器（全局事务管理）
+     - RM：资源管理器（数据库）
+   - XA协议采用两段式提交的方式管理分布式事务。XA协议提供资源管理器于事务管理器之间通信的协议标准接口。
+   - 两阶段的思路可以概括为：参与者将操作成败通知协调者，再有协调者根据所有参与者的反馈情况决定各个参与者是否要提交操作还是回滚操作。
+     - 准备阶段 preCommit：事务协调者要求每个涉及到事务的数据库预提交操作，执行本地事务，并反映是否可以提交。
+     - 提交阶段 commit ：事务协调器要求每个数据库提交数据，或者回滚。
+   - 缺点：
+     - 单点问题
+     - 同步阻塞
+     - 数据不一致
+### 2、3PC
+ - 三阶段提交是二阶段的一种改进版本
+   - 1、引入超时机制
+   - 2、在第一个阶段和第二个阶段之间插入一个准备阶段。保证了最后提交阶段各个参与节点之间的状态是一致的。
+ - 三个阶段：
+   - CanCommit：准备阶段。协调者向参与制发送commit请求，参与者如果可以提交就返回yes，否则返回no响应
+   - PreCommit：预提交阶段。协调者根据参与者在准备阶段的响应判断是否执行事务还是中断事务。参与者执行完操作后返回ACK响应，同时开始等待最终指令。
+   - DoCommit阶段：提交阶段，协调者跟根据参与者在准备阶段的响应判断是否执行事务，还是中断事务。
+     - 如果所有的参与者返回正确的ACK则，提交事务
+     - 如果参与者一个或多个收到错误的ACK响应或者超时，则中断事务。
+     - 如果参与者无法及时收到来自协调者的提交或者中断事务请求，在等待超时过后，则继续进行事务提交。
+### 3、TCC？
+ - TCC是两阶段提交的一个变种，针对每一个操作，都需要有一个其对应的确认和取消操作。当操作成功是，调佣确认操作，当操作失败是调用取消操作。只不过这里的提交和回滚是针对业务上的。
+ - 所以语句TCC实现的分布式事务也可以看做是对业务的一种补偿。
+ - TCC的三个阶段：
+   - 1、Try：尝试待进行的业务
+   - 2、Config阶段：确认执行业务。
+   - 3、Cancel：取消待执行的业务。
+ - TCC是业务层面的分布式事务，保证最终一致性，不会一致持有锁。
+   - 优点：把数据层二阶段提交交给应用层来实现，规避了数据库的2PC性能低下。
+   - 缺点：TCC的try、Confirm和Cancel操作功能需提交业务功能。开发成本高。
+ 
+### 4、本地消息表？
+ - 本地消息表的核心思想是将分布式事务拆分成本地事务进行处理。
+ - 拿订单服务和库存服务为例eg执行流程
+   - 1、订单服务，添加一条订单和一条消息，在一个事务里提交
+   - 2、订单服务，使用定时任务轮询查询未同步的消息，发送到MQ，如果发送失败，就重新发送，
+   - 3、库存服务，接受MQ消息，修改库存表，需要保证幂等性
+   - 4、如果修改成功，调用rpc接口修改订单系统消息表的状态为已完成。
+   - 5、如果修改失败，可以不做处理，等待重试。
+### 5、MQ消息事务？
+ - 消息事务的原理是将两个事务同时中间件进行解耦？
+ - 订单服务执行自己的本地事务，并发送MQ消息，库存服务接收消息，执行自己的本都事务。乍一看好像跟本地消息表的实现方案一样，只是省去了本地消息表的操作和轮询发送MQ的操作。但实际上两种方案实现是不一样的。
+ - 消息事务一定要保证业务操作和消息发送的一致性，如果业务操作成功，这条消息也一定投递成功。
+ - 执行流程
+   - 1、发送prepare消息到消息中间件。
+   - 2、发送成功后，执行本地事务。
+   - 3、如果事务执行成功，则commit，消息中间件会把消息发送给消费端。
+   - 4、如果事务执行失败，则回滚，消息中间件将prepare消息删除。
+   - 5、消费端接收到消息进行消费，如果消费失败，则不断重试。
+ - 消息事务依赖消息中间件的消息事务。例如我们熟悉的RocketMQ就支持事务消息。
+### 6、最大努力通知？
+ - 最大努力通知相比实现会简单一些，适用一些对最终一致性实时性要求没有那么高的业务，例如支付系统
+ - 执行流程：
+   - 1、业务系统调用支付平台支付接口，并在本地记录，支付状态为支付中。
+   - 2、支付平台进行支付后，无论成功还是失败，同步给业务系统一个结果通知。
+   - 3、如果通知一直失败则会根据重试规则异步进行重试，达到最大通知次数后，不再通知。
+   - 4、支付平台提供查询订单支付操作结果接口。
+   - 5、业务系统根据一定的业务规则去支付平台查询支付结果。
+### 7、Seata 。框架。。。
  
 
 
