[feat]Seata框架知识上传。

--- a/笔记记录/8、分布式.md
+++ b/笔记记录/8、分布式.md
@@ -255,7 +255,23 @@
    - 3、如果通知一直失败则会根据重试规则异步进行重试，达到最大通知次数后，不再通知。
    - 4、支付平台提供查询订单支付操作结果接口。
    - 5、业务系统根据一定的业务规则去支付平台查询支付结果。
-### 7、Seata 。框架。。。
- 
-
-
+### 7、Seata框架？
+ - Seata 的设计目标是对业务无侵入，因此它是从业务无侵入的两阶段提交（全局事务）着手，在传统的两阶段上进行改进，他把一个分布式事务理解成一个包含了若干分支事务的全局事务。而全局事务的职责是协调它管理的分支事务达成一致性，要么一起成功提交，要么一起失败回滚。也就是一荣俱荣一损俱损~
+ - Seata中有折磨几种重要的角色：
+    - TC（Transaction Coordinator）：事务协调者。管理全局事务的运行状态，用于全局性事务的提交和回滚。
+    - TM（Transaction Manager）：事控制全局事务的边界，负责开启一个全局事务，并最终发起全局提交或全局回滚的决议。
+    - RM（Resource Manager）:资源管理器。用于分支事务上的资源管理，向TC注册分支事务，上报分支事务的状态，接收TC的命令来条或者回滚分支事务。  
+ - Seata整体执行的过程：
+    - 1、服务A中的TM向TC申请开启一个全局事务。TC就会创建一个全局事务并返回一个全局的XID
+    - 2、服务A中的RM向TC注册分支事务，然后将这个分支事务纳入XID对应的全局事务管辖中
+    - 3、服务A开始执行分支事务。
+    - 4、服务A开始执行远程调用B服务，此时XID会根据调用链传播。
+    - 5、服务B中的 RM 也向 TC 注册分支事务，然后将这个分支事务纳入 XID 对应的全局事务管辖中
+    - 6、服务B开始执行分支事务。
+    - 7、全局事务调用处理结束后，TM会根据有无异常的情况，向TC发起全局事务的提交或者恢复
+    - 8、TC协调其管辖之下的所有分支事务，决定提交还是回滚。
+ - Seata整体执行流程：
+  - 1、TM向TC申请一个全局事务，TC创建全局事务后返回全局唯一的XID，XID会在全局事务的上下文中传播。
+  - 2、RM向TC注册分支事务。该分支事务归属于拥有相同XID的全局事务。
+  - 3、TM向TC发起全局提交或者回滚。
+  - 4、TC调度XID下的分支事务完成提交或者回滚。
