[feat]分布式知识&数据库知识上传。

--- a/笔记记录/8、分布式.md
+++ b/笔记记录/8、分布式.md
@@ -275,3 +275,27 @@
   - 2、RM向TC注册分支事务。该分支事务归属于拥有相同XID的全局事务。
   - 3、TM向TC发起全局提交或者回滚。
   - 4、TC调度XID下的分支事务完成提交或者回滚。
+
+## 8、什么是幂等性？
+ - 幂等性是一个数学概念。用在接口上：用在接口上就可以理解为：同一个接口，多次发出同一个请求，请求的结果是一致的。
+ 
+## 9、怎么保证接口的幂等性？
+ - 1、insert 前先select。
+ - 2、加唯一索引。
+ - 3、加悲观锁。
+ - 4、加乐观锁。
+ - 5、建防重表。
+ - 6、状态机：有些业务是有状态的，比如订单中有：1-下单 2-已支付 3-完成 4-撤销等状态，可以通过限制状态的流动来完成幂等。
+ - 7、分布式锁。
+ - 8、token机制。
+
+## 10、分布式限流算法？
+ - 计数器
+ - 漏桶算法：就是桶底出水的速度恒定，进水的速度可能快慢不一，但是进水量大于出水量的时候，水会被装在桶里，不会直接被丢弃；但是桶也有容量限制，当桶装满水后溢出的部分还是会被丢弃的。
+    - 算法实现：可以准备一个队列老保存暂时处理不了的请求，然后通过一个线程池定期从队列中获取请求来执行。
+ - 令牌桶算法：
+  - 令牌桶就是生产访问令牌的一个地方，生产的速度恒定。用户访问的时候当桶中有令牌就可以访问，否则将触发限流。
+  - 实现方案：Guava RateLimiter限流。
+    - Guava RateLimiter是一个谷歌提供的限流，其基于令牌桶算法，比较适用于单实例的系统。
+ 
+
