--- a/笔记记录/11、微服务框架知识.md
+++ b/笔记记录/11、微服务框架知识.md
@@ -2,14 +2,22 @@
  【参考文档：https://zhuanlan.zhihu.com/p/531877424】
 
 ## 2、什么是Spring Cloud
- - Spring Cloud是一系列框架的有序集合。它利用Spring Boot的开发便利性巧妙地简化了分布式系统基础设施的开发，如服务发现注册、配置中心、智能路由、消息总线、负载均衡、断路器、数据监控等，都可以用Spring Boot的开发风格做到一键启动和部署。Spring Cloud并没有重复制造轮子，它只是将各家公司开发的比较成熟、经得起实际考验的服务框架组合起来，通过Spring Boot风格进行再封装屏蔽掉了复杂的配置和实现原理，最终给开发者留出了一套简单易懂、易部署和易维护的分布式系统开发工具包。
-
+ - Spring Cloud是一系列框架的有序集合。它利用SpringBoot的开发便利性巧妙地简化了分布式系统基础设施的开发，如服务发现注册、配置中心、智能路由、消息总线、负载均衡、断路器、数据监控等，都可以用Spring Boot的开发风格做到一键启动和部署。Spring Cloud并没有重复制造轮子，它只是将各家公司开发的比较成熟、经得起实际考验的服务框架组合起来，通过Spring Boot风格进行再封装屏蔽掉了复杂的配置和实现原理，最终给开发者留出了一套简单易懂、易部署和易维护的分布式系统开发工具包。
+ - SpringCloud 是Spring官方推出的微服务治理框架。
 ## 3、Consul知识整理？
 ### 1、什么是Consul？
- - Consul是一种分布式服务发现和配置管理工具，它可以用于服务注册、健康检查、负载均衡、故障恢复等方面。
+ - Consul是一种分布式服务发现和配置管理工具，它可以用于
+     - 服务注册 
+     - 健康检查
+     - K、V存储
+     - 事件通知   
+     - 负载均衡
+     - 故障恢复
  - Consul支持多数据中心、多种服务发现方式和多种协议，可以帮助开发人员和维护人员更好的管理和维护分布式系统。
 ### 2、Consul的主要功能有哪些？
  - Consul的主要功能包括服务注册、健康检查、负载均衡、故障恢复、分布式KV存储、事件通知等。其中，服务注册和健康检查是Consul最核心的功能。他可以帮助开发人员更好地管理和维护分布式系统。
+ - 服务发现：可以通过Consul客户端注册服务，这里服务可以是API站点、Redis服务器、MySQL服务器；当其他客户端需要使用对应的服务时，Consul可以通过DNS或者HTTP的形式将服务返回给所需客户端，无需再手动指定IP和端口，由Consul统一管理。
+ - 健康检查
 ### 3、Consul的服务注册时如何实现的?
  - Consul的注册是通过Agent进程实现的。
  - 当一个服务启动时。他会向Consul的Agent发送一个注册请求，Agent会将服务的元数据存储在本地，并将服务的信息发送到Consul的Server上。
@@ -51,6 +59,9 @@
 
 
 ## 10、Nacos  
+
+
+## 11、Feign
 
 
 
