[feat]分布式知识&数据库知识上传。

--- a/笔记记录/10、计算机网络.md
+++ b/笔记记录/10、计算机网络.md
@@ -1,11 +1,11 @@
 ## 1、OSI七层模型
- - 应用层
- - 表示层
- - 会话层
- - 传输层
- - 网络层
- - 数据链路成
- - 物理层
+ - 应用层：为应用计算机提供服务。
+ - 表示层：数据处理（编解码。加密处理，压缩解压缩）
+ - 会话层：管理（建立、维护、重连）应用程序之间的会话
+ - 传输层：为两台主机进程之间的通信提供通用的数据传输服务
+ - 网络层：路由和寻址（决定数据在网络的游走路径）
+ - 数据链路成：（帧编码和误差纠正控制）
+ - 物理层：透明地传输比特流输出
 
  ![img_1.png](img_1.png)	
 
@@ -48,3 +48,8 @@
  ![img.png](img.png)
  
 ## 8、TCP报文格式是怎么样的？
+
+
+
+## 9、TCP和UDP的区别（重要） 
+ 1 - 、
