--- a/笔记记录/10、计算机网络.md
+++ b/笔记记录/10、计算机网络.md
@@ -52,4 +52,35 @@
 
 
 ## 9、TCP和UDP的区别（重要） 
- 1 - 、
+ - 1、是否面向连接：UDP在传输数据之前不需要先建立连接，而TCP提供面向连接的服务，在传数据之前必须先建立连接。数据传送结束后释放连接。
+ - 2、是否可靠传输：远地主机在收到 UDP 报文后，不需要给出任何确认，并且不保证数据不丢失，不保证是否顺序到达。TCP 提供可靠的传输服务，TCP 在传递数据之前，会有三次握手来建立连接，而且在数据传递时，有确认、窗口、重传、拥塞控制机制。通过 TCP 连接传输的数据，无差错、不丢失、不重复、并且按序到达。
+%81
+ - 3、是否有状态：这个和上面的“是否可靠传输”相对应。TCP 传输是有状态的，这个有状态说的是 TCP 会去记录自己发送消息的状态比如消息是否发送了、是否被接收了等等。为此 ，TCP 需要维持复杂的连接状态表。而 UDP 是无状态服务，简单来说就是不管发出去之后的事情了。
+ - 4、传输效率：由于使用 TCP 进行传输的时候多了连接、确认、重传等机制，所以 TCP 的传输效率要比 UDP 低很多。
+ - 5、传输形式：TCP 是面向字节流的，UDP 是面向报文的。
+ - 6、首部开销：TCP 首部开销（20 ～ 60 字节）比 UDP 首部开销（8 字节）要大。
+ - 7、是否提供广播或多播服务：TCP 只支持点对点通信，UDP 支持一对一、一对多、多对一、多对多。
+
+## 10、什么时候选择TCP，什么时候选择UDP？
+ - UDP一般用于即时通信，比如：语音、视频、直播等等。这些场景对传输数据的准确性要求不是特别高，比如看视频即使少个一两帧，实际给人的感觉区别不大。
+ - TCP用于对传输准确性要求特别高的场景。比如文件下载、发送和接收邮件、远程登录等。
+ 
+## 11、什么是ARP协议？
+ - ARP协议是介于网络层和数据链路层之间的协议，换句话说就是ARP协议建立了主机IP地址和MAC地址的映射关系。
+ - ARP协议在协议栈中的位置？
+	-  ARP 协议在协议栈中的位置非常重要，在理解了它的工作原理之后，也很难说它到底是网络层协议，还是链路层协议，因为它恰恰串联起了网络层和链路层。国外的大部分教程通常将 ARP 协议放在网络层。
+ - ARP协议解决了什么问题？
+  	-  ARP 协议，全称 地址解析协议（Address Resolution Protocol），它解决的是网络层地址和链路层地址之间的转换问题。因为一个 IP 数据报在物理上传输的过程中，总是需要知道下一跳（物理上的下一个目的地）该去往何处，但 IP 地址属于逻辑地址，而 MAC 地址才是物理地址，ARP 协议解决了 IP 地址转 MAC 地址的一些问题。
+ - ARP工作原理？
+    - ARP表、广播问询、单播响应。
+	- MAC地址是什么：全称是媒体访问地址。 如果说，互联网中每一个资源都由IP地址唯一标识，那么设备都由MAC地址唯一标识。
+	- ARP原理分为两个场景讨论？
+		- 1、同一个局域网内的MAC寻址。
+		  - ![img_5.png](img_5.png)
+	    - 2、从一个局域网到另一个局域网中的网络设备的寻址。
+		  - ![img_6.png](img_6.png)		
+-----------------
+## 12、什么是RIP协议?
+
+
+## 13、什么是NAT协议？
