[feat]Java基础和计算机网络知识上传。

--- a/笔记记录/8、分布式.md
+++ b/笔记记录/8、分布式.md
@@ -1,8 +1,8 @@
 ## 1、分布式CAP原则？
- - CAP原则有称为CAP定理，指的是一个分布式系统中，Consistency（一致性）、Availability（可用性）、Partition tolerance(分区容错性)这3个几把呢需求，最多只能同时满足其中的两个。
- - Consistency一致性：值多个数据在多个副本之间能够保持一致的特性（严格的一致性）
- - Availability可用性：之系统提供的服务必须一直处于可用的状态，每次请求都能获取到非错的响应。
- - Partition tolerance(分区容错性)：分布式系统在遇到任何网络分区故障的时候，仍然能够对外提供满足一致性和可用性的服务，除非整个网络环境都发生了故障。
+ - CAP原则有称为CAP定理，指的是一个分布式系统中，Consistency（一致性）、Availability（可用性）、Partition tolerance(分区容错性)这3个基本需求，最多只能同时满足其中的两个。
+ - Consistency（一致性）：指多个数据在多个副本之间能够保持一致的特性（严格的一致性）
+ - Availability（可用性）：系统提供的服务必须一直处于可用的状态，每次请求都能获取到非错的响应。
+ - Partition tolerance（分区容错性）：分布式系统在遇到任何网络分区故障的时候，仍然能够对外提供满足一致性和可用性的服务，除非整个网络环境都发生了故障。
 
 ## 2、Base理论
  - Base是Basic Available（基本可用）、Soft-state（软状态）和Eventually Consistent（最终一致性）三个短语的缩写。Base理论是对CAP中一致性和可用性A权衡的结果。
@@ -23,7 +23,7 @@
 
  - Paxos算法是兰伯特在1990年提出的一种分布式算法。
  - 兰伯特当时提出的Paxos算法主要包括两个部分，BasicPaxos算法和Multi-Paxos算法
- - Raft算法那、ZAB算法、FastPaxos算法都是基于Paxos算法改进而来的
+ - Raft算法、ZAB算法、FastPaxos算法都是基于Paxos算法改进而来的
       
  - 3种角色：    
      - 1.Proposer（提议者）：提议者提提案，用于投票表决。Proposal信息包括Proposal ID和提议的值（Value）。
